examples/test/testpolicy19191.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19191
  namespace: namespace341
spec:
  podSelector:
    matchLabels:
      key37: value49
      key0: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value6
      podSelector:
        matchLabels:
          key12: value3
          key0: value11
